hw-14-sequence-of-numbers - переделана реализация с использованием wait/notify

--- a/hw14-sequence-of-numbers/pom.xml
+++ b/hw14-sequence-of-numbers/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>hw14-sequence-of-numbers</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
